--- a/nextjs/components/header/Header.module.css
+++ b/nextjs/components/header/Header.module.css
@@ -35,7 +35,7 @@
     text-shadow: 2px 2px white;
 }
 
-.header .titleFull {
+.header p.titleFull {
     margin-top: 0;
     margin-bottom: 1.125rem;
     color: #274141;
@@ -44,6 +44,7 @@
     in case the text is overlaying the fulmar picture */
     text-shadow: 1px 1px 1px #cee3f2;
     padding-top: 0.625rem;
+    padding-bottom: 0.75rem;
 }
 
 
